<resources>
    <string name="app_name">Journal</string>
    <string name="label_title">Title</string>
    <string name="label_date">Date</string>
    <string name="label_content">Content</string>
    <string name="description_edit_button">Button for editing an entry</string>
    <string name="description_delete_button">Button for deleting an entry</string>
    <string name="new_entry">New Entry</string>
    <string name="toast_entry_delete">Entry has been deleted!</string>
    <string name="label_time">Time</string>
    <string name="prompt_delete_entry">Delete entry?</string>
    <string name="prompt_confirm">Confirm</string>
    <string name="done">Done</string>
    <string name="list_empty_header">Add your first Journal Entry</string>
    <string name="edit_entry">Edit Entry</string>
    <string name="delete_entry">Delete entry</string>
    <string name="delete">Delete</string>
    <string name="login_title">Please enter your pin</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Sign up</string>
    <string name="signup_header">Create Account</string>
    <string name="signup_subheader">Hello! To start using Journal. Please enter your name and your pin.</string>
    <string name="name">Name</string>
    <string name="pin">Enter your pin</string>
    <string name="pin_confirm">Confirm your pin</string>
    <string name="toast_unmatched_pin">Pin does not match. Please try again</string>
    <string name="toast_user_created">User has been successfully created</string>
    <string name="toast_user_exist">Name has already been registered</string>
    <string name="toast_user_notexist">Name is not yet registered</string>
    <string name="toast_noname">Please enter a name</string>
    <string name="toast_pin_min_length">the pin should be at least 4 digits</string>
    <string name="toast_pin_incorrect">The entered pin is incorrect</string>
</resources>